cmake_minimum_required(VERSION 2.8)
project(CATAP)
cmake_policy(SET CMP0074 NEW)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set(CXX_STANDARD 17)
set(PY_VERSION 3)


if (WIN32)
  message(STATUS "WIN32 BUILD")
  set(Boost_DIR "C:/boost/boost_1_63_0")
  set(EPICS_DIR "C:/epics/base-3.14.12.5")
  set(YAML_PARSER_LIB_RELEASE_DIR "C:/yaml-cpp-build/Release")
  set(YAML_PARSER_LIB_DEBUG_DIR "C:/yaml-cpp-build/Debug")
  set(YAML_PARSER_DIR "C:/yaml")
  set(EPICS_LIBRARYDIR "C:/epics/base-3.14.12.5/lib/windows-x64/")
  set(EPICS_DLLDIR "C:/epics/base-3.14.12.5/bin/windows-x64/")
  set(EPICS_OS_INCLUDES ${EPICS_DIR}/include/os/WIN32)
  set(EPICS_COM_LIB ${EPICS_LIBRARYDIR}Com.lib)
  set(EPICS_CA_LIB ${EPICS_LIBRARYDIR}ca.lib)
  set(EPICS_COM_DLL ${EPICS_DLLDIR}Com.dll)
  set(EPICS_CA_DLL ${EPICS_DLLDIR}ca.dll)
endif(WIN32)
if(UNIX)
  message(STATUS "UNIX BUILD")
  set(BOOSTROOT "~/dev/boost_1_63_0")
  set(EPICS_DIR "~/dev/base-3.14.12.5/")
  set(YAML_PARSER_LIB_DIR "/usr/local/lib")
  set(YAML_PARSER_DIR "~/dev/yaml-cpp")
  set(EPICS_LIBRARYDIR "~/dev/base-3.14.12.5/lib/linux-x86_64/")
  set(EPICS_OS_INCLUDES ${EPICS_DIR}/include/os/Linux)
  set(EPICS_COM_LIB ${EPICS_LIBRARYDIR}libCom.so)
  set(EPICS_CA_LIB ${EPICS_LIBRARYDIR}libca.so)
endif(UNIX)

set_property(GLOBAL PROPERTY DEBUG_COnFIGURATIOnS "Debug;RelWithDebInfo")
set_property(GLOBAL PROPERTY RELEASE_COnFIGURATIOnS "Release;MinSizeRel")
find_package(PythonLibs ${PY_VERSION} REQUIRED)
find_package(Boost 1.63 REQUIRED COMPONENTS python3 system filesystem thread chrono atomic date_time unit_test_framework)
message("Finding Boost...")

if(Boost_FOUND)
    message("Found Boost")
    add_definitiOns(${Boost_LIB_DIAGNOSTIC_DEFINITIOnS})
    if(WIN32)
      message(STATUS "WIN32 BUILD: TRUE")
      set(Boost_USE_STATIC_LIBS Off)
      set(Boost_USE_SHARED_LIBS On)
      set(Boost_USE_MULTITHREAD On)
      set(Boost_USE_STATIC_RUNTIME Off)
      add_definitiOns(-DBOOST_ALL_DYN_LINK)
    endif(WIN32)
    if(UNIX)
      set(Boost_USE_STATIC_LIBS Off)
      set(Boost_USE_SHARED_LIBS On)
      set(Boost_USE_MULTITHREAD On)
      set(Boost_USE_STATIC_RUNTIME Off)
      add_definitiOns(-DBOOST_ALL_DYN_LINK)
    endif(UNIX)
endif(Boost_FOUND)

set(MASTER_LATTICE_LOCATION ${CMAKE_SOURCE_DIR}/MasterLattice)
add_definitions(-DMASTER_LATTICE_LOCATION="${MASTER_LATTICE_LOCATION}")

add_subdirectory(Factories)
add_subdirectory(LoggingSystem)
add_subdirectory(ConfigReader)
add_subdirectory(Hardware)
add_subdirectory(PythonInterface)
add_subdirectory(PV)
add_subdirectory(EPICSInterface)
add_subdirectory(EPICSTools)
add_subdirectory(Utilities)
add_subdirectory(Docs)
